# openknow

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
openknow/: __init__.py  cli.py  config.py  downloader.py  graph_client.py  plugins.py  webapp.py  workspace.py
openknow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
openknow/templates/: index.html
tests/: __init__.py  test_cli.py  test_downloader.py  test_graph_client.py  test_webapp.py  test_workspace.py
