[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openknow"
version = "0.1.0"
description = "Local agent for accessing OneDrive and SharePoint knowledge"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = [
    "msal>=1.31.1",
    "requests>=2.32.3",
    "click>=8.1.8",
]

[project.scripts]
openknow = "openknow.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "responses>=0.25",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["openknow*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
